[project]
name = "expense-tracker"
version = "0.1.0"
description = "App to parse and track personal expenses."
authors = [{ name = "Alejandro Quintero-Roba" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "tabula-py>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"