[project]
name = "expense-tracker"
version = "0.1.0"
description = "App to parse and track personal expenses."
authors = [{ name = "Alejandro Quintero-Roba" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.1",
    "pypdfium2==4.30.0",
    "tabula-py>=2.10.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.47.1",
    "matplotlib>=3.10.5",
    "plotly>=6.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
